--- a/index.html
+++ b/index.html
@@ -7,21 +7,36 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <div class="heading"> 
-             <div class="logo">Header Logo</div>
-             <div class="link">Header Link One</div>
-             <div class="link">Header Link Two</div>
-             <div class="link">Header Link Three</div>
+             <div class="logo"> Header Logo</div>
+             <nav class="link"><a href=""></a>Header Link One</nav>
+             <nav class="link"><a href=""></a>Header Link Two</nav>
+             <nav class="link"><a href=""></a>Header Link Three</nav>
         </div>
     </header>
 
+    <main>
+        <div class="section one">
+            <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign Up</button>
+            <img>
 
 
 
 
 
+        </div>
+
+
+
+
+
+
+    </main>
 
 </body>
 </html>
