--- a/index.html
+++ b/index.html
@@ -19,24 +19,36 @@
     </header>
 
     <main>
-        <div class="section one">
+        <div class="section-one">
             <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button>Sign Up</button>
             <img>
-
-
-
-
-
         </div>
 
+        <div class="section-two">
+            <h2>Some random information.</h2>
+            <figure class=figure><img src="images/dog1.jpg" alt="Dog reading book with a yellow background">this is some subtext under an illustration or image</figure>
+            <figure class=figure><img src="images/dog2.jpg" alt="">this is some subtext under an illustration or image</figure>
+            <figure class=figure><img src="images/dog3.jpg" alt="">this is some subtext under an illustration or image</figure>
+            <figure class=figure><img src="images/dog4.jpg" alt="">this is some subtext under an illustration or image</figure>
+        </div>
 
+        <div class="section-three">
+            <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice. -Thor, God of Thunder</q>
+        </div>
 
-
-
+        <div class="section-four">
+            <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                    <button>Sign Up</button>
+        </div>
 
     </main>
+
+    <footer>
+        <p>Copyright © The Odin Project 2021 </p>
+    </footer>
 
 </body>
 </html>
