--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
             <img>
         </div>
 
+        <h2 div class="heading">Some random information.</h2>
+
         <div class="section-two">
-            <h2>Some random information.</h2>
-            <figure class=figure><img src="images/dog1.jpg" alt="Dog reading book with a yellow background">this is some subtext under an illustration or image</figure>
-            <figure class=figure><img src="images/dog2.jpg" alt="">this is some subtext under an illustration or image</figure>
-            <figure class=figure><img src="images/dog3.jpg" alt="">this is some subtext under an illustration or image</figure>
-            <figure class=figure><img src="images/dog4.jpg" alt="">this is some subtext under an illustration or image</figure>
+                <div class="figure-wrapper">
+                    <figure class=figure><img src="images/dog1.jpg" alt="Dog reading book with a yellow background">this is some subtext under an illustration or image</figure>
+                    <figure class=figure><img src="images/dog2.jpg" alt="Dog with glasses on a laptop with a yellow background">this is some subtext under an illustration or image</figure>
+                    <figure class=figure><img src="images/dog3.jpg" alt="Dog with glasses looking at a stack of books with a white background">this is some subtext under an illustration or image</figure>
+                    <figure class=figure><img src="images/dog4.jpg" alt="Dog with glasses looking at the camera with a white background">this is some subtext under an illustration or image</figure>
+                </div>
         </div>
 
         <div class="section-three">
