Add index.html style.css

--- a/index.html
+++ b/index.html
@@ -23,17 +23,24 @@
             <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button>Sign Up</button>
-            <img>
+            <img class="">
         </div>
 
-        <h2 div class="heading">Some random information.</h2>
+        <h2 div class="heading2">Some random information.</h2>
 
         <div class="section-two">
                 <div class="figure-wrapper">
-                    <figure class=figure><img src="images/dog1.jpg" alt="Dog reading book with a yellow background">this is some subtext under an illustration or image</figure>
-                    <figure class=figure><img src="images/dog2.jpg" alt="Dog with glasses on a laptop with a yellow background">this is some subtext under an illustration or image</figure>
-                    <figure class=figure><img src="images/dog3.jpg" alt="Dog with glasses looking at a stack of books with a white background">this is some subtext under an illustration or image</figure>
-                    <figure class=figure><img src="images/dog4.jpg" alt="Dog with glasses looking at the camera with a white background">this is some subtext under an illustration or image</figure>
+                    <figure class=figure>
+                        <img class="img2" src="images/dog1.jpg" alt="Dog reading book with a yellow background"> <figcaption class="imgsubtext"> is some subtext under an illustration or image</figcaption></figure>
+                    <figure class=figure>
+                        <img class="img2" src="images/dog2.jpg" alt="Dog with glasses on a laptop with a yellow background"> 
+                        <figcaption class="imgsubtext"> is some subtext under an illustration or image</figcaption></figure>
+                    <figure class=figure>
+                        <img class="img2" src="images/dog3.jpg" alt="Dog with glasses looking at a stack of books with a white background"> 
+                        <figcaption class="imgsubtext"> is some subtext under an illustration or image </figcaption></figure>
+                    <figure class=figure>
+                        <img class="img2" src="images/dog4.jpg" alt="Dog with glasses looking at the camera with a white background">
+                        <figcaption class="imgsubtext"> this is some subtext under an illustration or image </figcaption></figure>
                 </div>
         </div>
 
