--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 
     <main>
         <div class="section-one">
-            <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign Up</button>
-            <img class="">
+            <div class="section1con">
+              <h1 class="heading1">This website is awesome</h1>
+                <p class="content1">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="button1">Sign Up</button> </div>
+            
+            <div class="section1img"> <img class="img1" src="images/dog5.jpg" alt="Pug wearing a sweater"> </div>
         </div>
 
         <h2 div class="heading2">Some random information.</h2>
