--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header>
         <div class="heading"> 
              <div class="logo"> Header Logo</div>
-             <nav class="link"><a href=""></a>Header Link One</nav>
-             <nav class="link"><a href=""></a>Header Link Two</nav>
-             <nav class="link"><a href=""></a>Header Link Three</nav>
+                <div class="linkwrap">
+                <nav class="link"><a href=""></a>Header Link One</nav>
+                <nav class="link"><a href=""></a>Header Link Two</nav>
+                <nav class="link"><a href=""></a>Header Link Three</nav>
+                </div>
         </div>
     </header>
 
@@ -23,9 +25,10 @@
             <div class="section1con">
               <h1 class="heading1">This website is awesome</h1>
                 <p class="content1">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button class="button1">Sign Up</button> </div>
+                    <button class="button1">Sign Up</button></div>
             
             <div class="section1img"> <img class="img1" src="images/dog5.jpg" alt="Pug wearing a sweater"> </div>
+        
         </div>
 
         <h2 div class="heading2">Some random information.</h2>
@@ -47,13 +50,17 @@
         </div>
 
         <div class="section-three">
-            <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice. -Thor, God of Thunder</q>
+            <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice.</q>
+            <p class=bolder>-Thor, God of Thunder</p>
         </div>
 
         <div class="section-four">
-            <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                    <button>Sign Up</button>
+            <div class="myuk">
+                <div class="myukword">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p> </div>
+                <button class="button2">Sign Up</button>
+            </div>
         </div>
 
     </main>
